--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
+    "canvas-confetti": "1.9.4",
     "chalk": "4.1.0",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
     "msw": "0.33.0",
     "react": "17.0.1",
+    "react-confetti": "6.4.0",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
