--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "chalk": "4.1.0",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
-    "msw": "0.33.0",
-    "react": "17.0.1",
+    "motion": "12.34.3",
+    "msw": "2.12.10",
+    "react": "18.3.1",
     "react-confetti": "6.4.0",
-    "react-dom": "17.0.1",
+    "react-dom": "18.3.1",
+    "react-helmet": "6.1.0",
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0",
@@ -31,13 +33,15 @@
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "5.0.1"
   },
-  "scripts": {  "start": "react-scripts start",
-  "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-  "test": "react-scripts test"
-,
+  "scripts": {
+    "start": "react-scripts start",
     
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+    
+    "test": "react-scripts test",
+
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
