--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0",
-    "reactjs-popup": "2.0.6"
+    "react-slick": "0.31.0",
+    "reactjs-popup": "2.0.6",
+    "slick-carousel": "1.8.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
@@ -37,18 +39,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    
     "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
-    
     "test": "react-scripts test",
-
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
     "run-all": "npm-run-all --parallel test lint:fix"
-  
-  
   },
+  
   "lint-staged": {
     "*.js": [
       "npm run lint:fix"
@@ -57,6 +55,7 @@
       "npm run format"
     ]
   },
+  
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
